--- a/weather/styles.css
+++ b/weather/styles.css
@@ -44,8 +44,25 @@ h1 {
     width: 4vw;
     margin: 5px;
 }
+.weatherman {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;;
+    width: 400px;
+    height: 250px;
+    background-image: url('https://media.giphy.com/media/Tg6gXaLWcSYl4airld/giphy.gif');
+    background-size: cover;
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+  
+}
+
 .report {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    color: black;
+    color: white;
     font-size: 40px;
 }
